--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="container">
-        <img class="logo" src="https://scontent.fbkk6-1.fna.fbcdn.net/v/t39.30808-6/456022898_1032112434963224_8710076446767359004_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=127cfc&_nc_ohc=VlFNwLPL4XUQ7kNvgGcmZ2J&_nc_ht=scontent.fbkk6-1.fna&oh=00_AYDlfc4Rbm00HOCdqjuyZqy6zQTxjgivZEYG56-934F_Nw&oe=66C8EC3C" alt="">
+        <img class="logo" src="https://scontent.fbkk6-1.fna.fbcdn.net/v/t39.30808-6/456022898_1032112434963224_8710076446767359004_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=127cfc&_nc_ohc=s7SmiS27lDIQ7kNvgGdamyw&_nc_ht=scontent.fbkk6-1.fna&oh=00_AYBqxRxu0xLKIPcqlAmhyt-KcSPOqDMmyejiKg8aji2MBg&oe=66D3783C" alt="">
         <h1 class="name">Bulakhon Homphan</h1>
         <span class="slogan">Full Stack Web Developer</span>
         <div class="social-img">
@@ -32,22 +32,22 @@
         <div class="row">
             <div class="small-6 columns">
                 <div class="work">
-                    <img src="https://scontent.fbkk6-1.fna.fbcdn.net/v/t39.30808-6/456106361_1032190344955433_6050559627487652068_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=BpnEVzL__qcQ7kNvgGYMTMg&_nc_ht=scontent.fbkk6-1.fna&oh=00_AYB7g-w0Vnb3iiKZo95SvWxJ28iDsrqfddOzGFBK_mj64Q&oe=66C92051" alt="">
+                    <img src="https://scontent.fbkk6-1.fna.fbcdn.net/v/t39.30808-6/456106361_1032190344955433_6050559627487652068_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=kDLCoZ5rrXQQ7kNvgHT2SzU&_nc_ht=scontent.fbkk6-1.fna&oh=00_AYDQPiP6IN-vGzHwnTBaDU4U3OwO0SRcLuwJipWE04A3cg&oe=66D37411" alt="">
                 </div>
             </div>
             <div class="small-6 columns">
                 <div class="work">
-                    <img src="https://scontent.fbkk6-2.fna.fbcdn.net/v/t39.30808-6/455946247_1032191061622028_4575927678257469124_n.jpg?stp=dst-jpg_p180x540&_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_ohc=71vB5w7uUE4Q7kNvgEvDGaj&_nc_ht=scontent.fbkk6-2.fna&oh=00_AYDUewLVlfqtGQizVKmX7z6Pg12PcaHJSbMhcKq7Kjyj2A&oe=66C91D82" alt="">
+                    <img src="https://scontent.fbkk6-2.fna.fbcdn.net/v/t39.30808-6/455946247_1032191061622028_4575927678257469124_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_ohc=bwfpyF1R2uAQ7kNvgHacdUm&_nc_ht=scontent.fbkk6-2.fna&_nc_gid=Ap-VoCCumjJNdMzWc-N-E2t&oh=00_AYAfiJ1_hO1cVwx_YfrbW6xkwo44bfgtcBizM-K1neftZg&oe=66D37142" alt="">
                 </div>
             </div>
             <div class="small-6 columns">
                 <div class="work">
-                    <img src="https://scontent.fbkk6-2.fna.fbcdn.net/v/t39.30808-6/455827142_1032191571621977_8981011410348758217_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=127cfc&_nc_ohc=-J6PTHmOtM8Q7kNvgEIpbHw&_nc_ht=scontent.fbkk6-2.fna&oh=00_AYCMv6912FpjXm9FQ9jckedRjlEl6J2ap4CA0sBemErRNQ&oe=66C93389" alt="">
+                    <img src="https://scontent.fbkk6-2.fna.fbcdn.net/v/t39.30808-6/455827142_1032191571621977_8981011410348758217_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=127cfc&_nc_ohc=UlTDzN9j6mcQ7kNvgHMfr8q&_nc_ht=scontent.fbkk6-2.fna&oh=00_AYBR_w73SCMbBHT0BACBHC_JTisBRRMPrfA1fWSYvYqPLg&oe=66D38749" alt="">
                 </div>
             </div>
             <div class="small-6 columns">
                 <div class="work">
-                    <img src="https://scontent.fbkk6-2.fna.fbcdn.net/v/t39.30808-6/455785994_1032193261621808_52467321453851455_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=127cfc&_nc_ohc=qSr3D8rekNYQ7kNvgH6QsWD&_nc_ht=scontent.fbkk6-2.fna&oh=00_AYCg-u5aAU6i8b8BHvUdNxyD6KYbI-jnaV81wJuT6Bzymw&oe=66C919C7" alt="">
+                    <img src="https://scontent.fbkk6-2.fna.fbcdn.net/v/t39.30808-6/455785994_1032193261621808_52467321453851455_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=127cfc&_nc_ohc=ffA8kuPWxEcQ7kNvgFGMFfD&_nc_ht=scontent.fbkk6-2.fna&oh=00_AYASbSI8NPYI437B7fpcwG3f9KlBzKlHHjFHfXg_Vnmg5g&oe=66D36D87" alt="">
                 </div>
             </div>
         </div>
